git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -43,6 +43,16 @@
   url = {http://www.jstatsoft.org/v33/i01/}
 }
 
+@article{simon2011,
+  title={Regularization paths for cox’s proportional hazards model via coordinate descent},
+  author={Simon, N. and Friedman, J. and Hastie, T. and Tibshirani, R.},
+  journal={Journal of Statistical Software},
+  volume={39},
+  number={5},
+  pages={1--13},
+  year={2011}
+}
+
 @ARTICLE{graf99,
   author = {Erika Graf and Claudia Schmoor and Willi Sauerbrei and Martin Schumacher},
   title = {Assessment and comparison of prognostic classification schemes for
