--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -31,27 +31,28 @@
 }
 
 @ARTICLE{FHT2010,
-  author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
-  title = {Regularization Paths for Generalized Linear Models via Coordinate
-	Descent},
-  journal = {Journal of Statistical Software},
-  year = {2010},
-  volume = {33},
-  pages = {1--22},
-  number = {1},
-  bdsk-url-1 = {http://www.jstatsoft.org/v33/i01/},
-  url = {http://www.jstatsoft.org/v33/i01/}
-}
+ title = {Regularization Paths for Generalized Linear Models via
+      Coordinate Descent},
+    author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2010},
+    volume = {33},
+    number = {1},
+    pages = {1--22},
+    url = {http://www.jstatsoft.org/v33/i01/},
+  }
 
 @article{simon2011,
-  title={Regularization paths for cox’s proportional hazards model via coordinate descent},
-  author={Simon, N. and Friedman, J. and Hastie, T. and Tibshirani, R.},
-  journal={Journal of Statistical Software},
-  volume={39},
-  number={5},
-  pages={1--13},
-  year={2011}
-}
+ title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
+    author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob
+      Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {39},
+    number = {5},
+    pages = {1--13},
+    url = {http://www.jstatsoft.org/v39/i05/},
+  }
 
 @ARTICLE{graf99,
   author = {Erika Graf and Claudia Schmoor and Willi Sauerbrei and Martin Schumacher},
