git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@19 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -1,6 +1,10 @@
 % This file was created with JabRef 2.7.
 % Encoding: UTF-8
 
+@article{MeinshausenBuehlmann2010,
+ title={Stability selection}, volume={72},
+ url={http://doi.wiley.com/10.1111/j.1467-9868.2010.00740.x}, number={4}, journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology}, publisher={Wiley Online Library}, author={Meinshausen, Nicolai and Bühlmann, Peter}, year={2010}, pages={417--473}}
+
 @ARTICLE{BS2008,
   author = {Binder, H. and Schumacher, M.},
   title = {Adapting prediction error estimates for biased complexity selection
@@ -11,6 +15,14 @@
   number = {1},
   article = {12}
 }
+
+@article{metzeler08,
+	Author = {K.H. Metzeler and M. Hummel and C.D. Bloomfield and K. Spiekermann and J. Braess and M.-C. Sauerland and A. Heinecke and M. Radmacher  and G. Marcucci and S.P. Whitman and K. Maharry and P. Paschka and R.A. Larson and W.E. Berdel and T. Buchner and B. Wormann and U. Mansmann  and W. Hiddemann and S.K. Bohlander and C. Buske},
+	Journal = {Blood},
+	Pages = {4193--4201},
+	Title = {An 86 probe set gene expression signature predicts survival in cytogenetically normal acute myeloid leukemia},
+	Volume = {112(10)},
+	Year = {2008}}
 
 @ARTICLE{cox:1972,
   author = {Cox, D.R.},
