git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@20 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060.bib
+++ b/pkg/vignettes/c060.bib
@@ -3,7 +3,7 @@
 
 @article{MeinshausenBuehlmann2010,
  title={Stability selection}, volume={72},
- url={http://doi.wiley.com/10.1111/j.1467-9868.2010.00740.x}, number={4}, journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology}, publisher={Wiley Online Library}, author={Meinshausen, Nicolai and Bühlmann, Peter}, year={2010}, pages={417--473}}
+ url={http://doi.wiley.com/10.1111/j.1467-9868.2010.00740.x}, number={4}, journal={Journal of the Royal Statistical Society - Series B: Statistical Methodology}, publisher={Wiley Online Library}, author={Meinshausen, Nicolai and B\"uhlmann, Peter}, year={2010}, pages={417--473}}
 
 @ARTICLE{BS2008,
   author = {Binder, H. and Schumacher, M.},
