elsevier class style
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@22 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/vignettes/c060_vignette.Rnw
+++ b/pkg/vignettes/c060_vignette.Rnw
@@ -434,7 +434,7 @@ toLatex(sessionInfo())
 @
 
 \clearpage
-\bibliographystyle{spbasic}      % basic style, author-year citations 
+\bibliographystyle{model2-names}
 \bibliography{c060}   % name your BibTeX data base
 
 \end{document}
